<resources>
    <string name="app_name">DigiBoard</string>

    <string name="mobile_numb">Mobile number</string>

    <string name="some_id">+91</string>

    <string name="login_signu">Login/Signup</string>

    <string name="digi_board">DigiBoard</string>

    <string name="code_sent">We have sent you a 6 digit verification code on</string>

    <string name="submit">Submit</string>

    <string name="email">Email</string>

    <string name="name">Name</string>

    <string name="welcome">Welcome</string>
</resources>
