<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment"
android:background="#ffffff"
    >


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vector_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_cv"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_vector_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:tint="@color/colorPrimary"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/digi_board"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:gravity="center"
        android:text="@string/digi_board"
        android:textAppearance="@style/digi_board"
        app:layout_constraintBottom_toTopOf="@+id/login_cv"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/vector_1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="400dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login_signu"
            android:textColor="#000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_3"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="3dp"
                android:text="+91"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:background="#8A000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_numb"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="3dp"
                android:paddingEnd="63dp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login_signu" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>